--- a/Exercícios/Módulo-3/ex022/fundo006.html
+++ b/Exercícios/Módulo-3/ex022/fundo006.html
@@ -3,28 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de Imagem</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
+            height: 100vh;         
+            /*
             background-color: black;
-            height: 100vh;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
-        }
+            background-attachment: fixed;
+            */
+            
+
+            /* Shorthand - background
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 15px;
         }
+
+        main > h1 {
+            text-align: center;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.342);
+        }
         
         main > p {
             text-align: justify;
+            text-indent: 30px;
+            font-size: 1em;
         }
     </style>
 </head>
