--- a/Exercícios/Módulo-3/ex023/tabela002.html
+++ b/Exercícios/Módulo-3/ex023/tabela002.html
@@ -20,9 +20,20 @@
 
         }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        td.num {
+            text-align: right;
         }
     </style>
 </head>
@@ -32,6 +43,7 @@
         ANATOMIA PARA TABELAS GRANDES:
 
         TABLE
+            CAPTION
             THEAD
                 TR. TD, TH
             TBODY
@@ -41,10 +53,11 @@
     -->
 
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -159,8 +172,8 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
-                <td>00000</td>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num"><strong>212.583.720</strong></td>
             </tr>
         </tfoot>
     </table>
