atualização da tabela e conteúdo

--- a/Exercícios/Módulo-3/ex023/tabela002.html
+++ b/Exercícios/Módulo-3/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -27,8 +28,14 @@
             background-color: lightgray;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
+        }
+
         thead, tfoot {
-            background-color: gray;
+            background-color: #383838;
             color: white;
         }
 
@@ -181,6 +188,14 @@
             </tr>
         </tfoot>
     </table>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab temporibus blanditiis omnis delectus enim, atque mollitia tempora debitis molestias inventore magnam quas aut perferendis alias veritatis reiciendis illum natus suscipit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est doloremque animi nulla pariatur similique dolores at laborum quos, consectetur ipsam praesentium facilis placeat quia corporis sapiente ex autem dolor nostrum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem sapiente doloribus rerum! Corporis dolores necessitatibus tenetur officia incidunt sint distinctio deserunt vel non. Inventore et minima eaque voluptatibus, nobis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque facilis officiis officia. Assumenda consectetur sit iusto quisquam asperiores molestias excepturi minima libero, nostrum molestiae eos fugiat expedita ipsum deleniti iste. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis numquam explicabo reprehenderit iure quam. Ex deserunt quas modi rerum? Optio iste quae molestiae ullam ipsa consequuntur mollitia dicta cupiditate aliquid! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, architecto, veritatis suscipit totam dolorem illum incidunt animi voluptatem reiciendis laboriosam, veniam quia amet nulla numquam eaque impedit. Recusandae, magni nulla! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis eum dolorum reiciendis quisquam! Nam obcaecati voluptates pariatur earum. Quas alias ea totam maiores explicabo cum aliquam tempora esse vero!</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab temporibus blanditiis omnis delectus enim, atque mollitia tempora debitis molestias inventore magnam quas aut perferendis alias veritatis reiciendis illum natus suscipit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est doloremque animi nulla pariatur similique dolores at laborum quos, consectetur ipsam praesentium facilis placeat quia corporis sapiente ex autem dolor nostrum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem sapiente doloribus rerum! Corporis dolores necessitatibus tenetur officia incidunt sint distinctio deserunt vel non. Inventore et minima eaque voluptatibus, nobis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque facilis officiis officia. Assumenda consectetur sit iusto quisquam asperiores molestias excepturi minima libero, nostrum molestiae eos fugiat expedita ipsum deleniti iste. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis numquam explicabo reprehenderit iure quam. Ex deserunt quas modi rerum? Optio iste quae molestiae ullam ipsa consequuntur mollitia dicta cupiditate aliquid! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, architecto, veritatis suscipit totam dolorem illum incidunt animi voluptatem reiciendis laboriosam, veniam quia amet nulla numquam eaque impedit. Recusandae, magni nulla! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis eum dolorum reiciendis quisquam! Nam obcaecati voluptates pariatur earum. Quas alias ea totam maiores explicabo cum aliquam tempora esse vero!</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab temporibus blanditiis omnis delectus enim, atque mollitia tempora debitis molestias inventore magnam quas aut perferendis alias veritatis reiciendis illum natus suscipit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est doloremque animi nulla pariatur similique dolores at laborum quos, consectetur ipsam praesentium facilis placeat quia corporis sapiente ex autem dolor nostrum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem sapiente doloribus rerum! Corporis dolores necessitatibus tenetur officia incidunt sint distinctio deserunt vel non. Inventore et minima eaque voluptatibus, nobis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque facilis officiis officia. Assumenda consectetur sit iusto quisquam asperiores molestias excepturi minima libero, nostrum molestiae eos fugiat expedita ipsum deleniti iste. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis numquam explicabo reprehenderit iure quam. Ex deserunt quas modi rerum? Optio iste quae molestiae ullam ipsa consequuntur mollitia dicta cupiditate aliquid! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, architecto, veritatis suscipit totam dolorem illum incidunt animi voluptatem reiciendis laboriosam, veniam quia amet nulla numquam eaque impedit. Recusandae, magni nulla! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis eum dolorum reiciendis quisquam! Nam obcaecati voluptates pariatur earum. Quas alias ea totam maiores explicabo cum aliquam tempora esse vero!</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab temporibus blanditiis omnis delectus enim, atque mollitia tempora debitis molestias inventore magnam quas aut perferendis alias veritatis reiciendis illum natus suscipit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est doloremque animi nulla pariatur similique dolores at laborum quos, consectetur ipsam praesentium facilis placeat quia corporis sapiente ex autem dolor nostrum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem sapiente doloribus rerum! Corporis dolores necessitatibus tenetur officia incidunt sint distinctio deserunt vel non. Inventore et minima eaque voluptatibus, nobis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque facilis officiis officia. Assumenda consectetur sit iusto quisquam asperiores molestias excepturi minima libero, nostrum molestiae eos fugiat expedita ipsum deleniti iste. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis numquam explicabo reprehenderit iure quam. Ex deserunt quas modi rerum? Optio iste quae molestiae ullam ipsa consequuntur mollitia dicta cupiditate aliquid! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, architecto, veritatis suscipit totam dolorem illum incidunt animi voluptatem reiciendis laboriosam, veniam quia amet nulla numquam eaque impedit. Recusandae, magni nulla! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis eum dolorum reiciendis quisquam! Nam obcaecati voluptates pariatur earum. Quas alias ea totam maiores explicabo cum aliquam tempora esse vero!</p>
     
 </body>
 </html>
