atualização e criei a tabela005

--- a/Desafios/d14/desafio.html
+++ b/Desafios/d14/desafio.html
@@ -28,6 +28,12 @@
             background-color: gray;
             color: white;
         }
+
+        .destaque {
+            background-color: gray;
+            color: white;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -71,9 +77,9 @@
                 <td>0.0</td>
                 <td>0.0</td>
             </tr>
-            <tr>
-                <th colspan="4" scope="row" style="background-color: gray; color: white;">Média de Exatas</th>
-                <td style="background-color: gray; color: white; font-weight: bold;">0.0</td>
+            <tr class="destaque">
+                <th colspan="4" scope="row">Média de Exatas</th>
+                <td>0.0</td>
             </tr>
             <tr>
                 <th rowspan="2" scope="rowgroup">Humanas</th>
@@ -88,9 +94,9 @@
                 <td>0.0</td>
                 <td>0.0</td>
             </tr>
-            <tr>
-                <th colspan="4" scope="row" style="background-color: gray; color: white;">Média de Humanas</th>
-                <td style="background-color: gray; color: white; font-weight: bold;">0.0</td>
+            <tr class="destaque">
+                <th colspan="4" scope="row">Média de Humanas</th>
+                <td>0.0</td>
             </tr>
         </tbody>
     </table>
