--- a/Exercícios/Módulo-4/ex024/iframe002.html
+++ b/Exercícios/Módulo-4/ex024/iframe002.html
@@ -19,7 +19,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam magnam vitae nam adipisci consectetur rem ipsa repellat labore et. Delectus ipsum dignissimos numquam, alias nisi vero unde fuga optio eaque! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel saepe animi nisi ex corrupti similique quo reprehenderit officiis odit laboriosam aut eveniet, accusamus illum consectetur fugiat accusantium cupiditate deserunt eligendi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nisi doloremque porro alias soluta labore placeat deleniti voluptatibus quam, dolor, odio voluptate aut. Illo totam iusto dolorum quam facere nisi?</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="pag001.html" frameborder="0" height="500" width="500">
+        <p class="">Infelizmente seu navegador não é compatível com isso!</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, blanditiis? Hic eveniet odit saepe magni. Consequatur adipisci in pariatur dicta tempore dignissimos qui nesciunt, vel facere libero voluptas hic sunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia quam facilis quis. Magnam molestiae praesentium, sequi quaerat impedit possimus saepe dolor consequuntur odio neque quisquam porro corrupti, aut et laboriosam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita culpa cumque fugit omnis earum temporibus minus. Accusamus dolorum, illum doloremque minima sapiente dolorem sit corrupti nulla ipsam, commodi minus veritatis.</p>
 </body>
